Fix width of donation form on mobile

--- a/src/components/css/donate.css
+++ b/src/components/css/donate.css
@@ -196,12 +196,16 @@
     flex-direction: column;
     width: 100%;
   }
-  .form-about {
-    width: 100%;
+  .form-about,
+  .iframe-container {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .payment-methods-container {
     flex-direction: column;
   }
+  
   .bank-transfers,
   .paypal,
   .other-ways {
